2002-09-23  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/bindings.c (ParseBinding):
	increased maximum allowed key symbol name length to 200 characters

	* fvwm/menus.c (paint_menu):
	fixed drawing problems with TiledPixmap and Solid MenuFace
	(pop_menu_up):
	fixed accidental menu animation with certain menu position hints

2002-09-20  Dominik Vogt  <dominik.vogt@gmx.de>

	* configure.in:
	* NEWS:

2002-09-19  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/fvwm2.1:
	* NEWS:
	updated for 2.4.11

	* fvwm/stack.c (__RaiseOrLowerWindow):
	fixed a core dump in the new stacking code

2002-09-15  Dominik Vogt  <dominik.vogt@gmx.de>

	* NEWS:
	* configure.in:
	increased version to 2.4.11

	* fvwm/fvwm2.1:
	* NEWS:
	updated for 2.4.10

2002-09-12  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c (HandleButtonPress):
	fixed hilighting of unfocused windows

2002-09-11  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/icons.c (DeIconify):
	fixed bug introduced with transient stacking patch

2002-09-08  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/stack.c (__RaiseOrLowerWindow):
	(RaiseOrLowerWindow):
	(__restack_window):
	(mark_transient_subtree):
	(__sort_transient_ring):
	properly handle restacking of windows with more than one transient and
	multiple levels of transients at the same time
	(__RaiseOrLowerWindow):
	(RaiseOrLowerWindow):
	renamed function and added wrapper

	* fvwm/fvwm.h (FvwmWindow):
	added new scratch registers

2002-09-06  Dominik Vogt  <dominik.vogt@gmx.de>

	* configure.in:
	* acinclude.m4:
	autoconf-2.53 fixes

2002-09-05  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/stack.c (RaiseOrLowerWindow):
	(__restack_window):
	(mark_transient_subtree):
	(must_move_transients):
	(is_on_top_of_layer_ignore_rom):
	handle restacking trees of transient windows; still does not work too
	well if a window has multiple transients at the same time

	* fvwm/stack.c (restack_windows):
	(new_layer):
	(__restack_window):