@@ -1,5 +1,8 @@
 2002-09-23  Dominik Vogt  <dominik.vogt@gmx.de>
 
+	* fvwm/conditional.c (CreateFlagString):
+	fixed quoting in conditional command conditions
+
 	* fvwm/bindings.c (ParseBinding):
 	increased maximum allowed key symbol name length to 200 characters
 
